商品添加和获取合约以及编译部署调用笔记

--- a/ebay_dapp/2.ebay去中心化拍卖平台合约代码开发.md
+++ b/ebay_dapp/2.ebay去中心化拍卖平台合约代码开发.md
@@ -1,3 +1,10 @@
+## ebay去中心化拍卖平台代码开发
+
+### 0.注意事项
+
+
+### 1.编写合约代码
+```js
 pragma solidity ^0.5.8;
 
 contract EcommerceStore {
@@ -54,3 +61,15 @@ contract EcommerceStore {
     }
 
 }
+```
+
+### 2.发布合约代码
+1. 通过`complie`编译
+2. 编写migration文件来使用`migrate`命令来部署
+
+### 3.交互测试
+1. 获取1个ether的wei值：`amt_1 = web3.utils.toWei('1', 'ether');`
+2. 获取当前时间的10位时间戳：`current_time = Math.round(new Date() / 1000);`
+3. 获取到合约的实例：`var contract; EcommerceStore.deployed().then(function(instance) {contract = instance;});`
+4. 调用添加函数添加商品到链上：`contract.addProductToStore('iphoneXR 128G红色', 'Phone', 'imageLink', 'descLink', current_time, current_time+1000, amt_1, 0).then(function(f) {console.log(f);});`
+5. 调用获取函数获取链上的商品：`contract.getProduct(2).then(function(f) {console.log(f);});`
