一站式测试脚本

--- a/ebay_dapp/3.ebay去中心化拍卖平台竞标和公告测试.md
+++ b/ebay_dapp/3.ebay去中心化拍卖平台竞标和公告测试.md
@@ -16,3 +16,32 @@
 14. A用户进行公告：`contract.revealBid(1, (2*amt_1).toString(), 'secretkey1', {from: '0x73Bb6B55F4a946cE2E6F9D2f14eb99d95E63761C'}).then(function(f) {console.log(f);});`
 15. B用户进行公告：`contract.revealBid(1, (2*amt_1).toString(), 'secretkey2', {from: '0x150E81808f15bE8527a7d3B4A0bAaff63e07A637'}).then(function(f) {console.log(f);});`
 16. 获取到最高竞拍者的信息：`contract.highestBidderInfo.call(1).then(function(f) {console.log(f);});`
+
+
+
+
+## 一站式脚本
+```js
+compile
+
+migrate --reset
+
+
+amt_1 = web3.utils.toWei('1', 'ether');
+current_time = Math.round(new Date() / 1000);
+eutil = require('./app/node_modules/ethereumjs-util');
+var contract; EcommerceStore.deployed().then(function(instance) {contract = instance;});
+
+contract.addProductToStore('iphoneXR 128G红色', 'Phone', 'imageLink', 'descLink', current_time, current_time+100000, amt_1, 0).then(function(f) {console.log(f);});
+
+sealedBid = '0x' + eutil.sha3((2*amt_1) + 'secretkey1').toString('hex');
+contract.bid(1, sealedBid, {value: 3*amt_1,from:'0x73Bb6B55F4a946cE2E6F9D2f14eb99d95E63761C'}).then(function(f) {console.log(f);});
+sealedBid = '0x' + eutil.sha3((3*amt_1) + 'secretkey2').toString('hex');
+contract.bid(1, sealedBid, {value: 4*amt_1,from:'0x150E81808f15bE8527a7d3B4A0bAaff63e07A637'}).then(function(f) {console.log(f);});
+
+contract.revealBid(1, (2*amt_1).toString(), 'secretkey1', {from: '0x73Bb6B55F4a946cE2E6F9D2f14eb99d95E63761C'}).then(function(f) {console.log(f);});
+
+contract.revealBid(1, (2*amt_1).toString(), 'secretkey2', {from: '0x150E81808f15bE8527a7d3B4A0bAaff63e07A637'}).then(function(f) {console.log(f);});
+
+contract.highestBidderInfo.call(1).then(function(f) {console.log(f);});
+```
