--- a/ebay_dapp/3.ebay去中心化拍卖平台竞标和公告测试.md
+++ b/ebay_dapp/3.ebay去中心化拍卖平台竞标和公告测试.md
@@ -45,3 +45,18 @@ contract.revealBid(1, (3*amt_1).toString(), 'secretkey2', {from: '0x150E81808f15
 
 contract.highestBidderInfo.call(1).then(function(f) {console.log(f);});
 ```
+
+
+## 商品添加脚本
+```js
+
+current_time = Math.round(new Date() / 1000);
+ amt_1 = web3.utils.toWei('1', 'ether');
+i.addProductToStore('iphone 5', 'Phones', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk', current_time, current_time + 200, 2*amt_1, 0).then(function(f) {console.log(f)})};
+i.addProductToStore('iphone 5s', 'Phones', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk', current_time, current_time + 400, 3*amt_1, 1).then(function(f) {console.log(f)});
+i.addProductToStore('iphone 6', 'Phones', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk', current_time, current_time + 14, amt_1, 0).then(function(f) {console.log(f)});
+i.addProductToStore('iphone 6s', 'Phones', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk', current_time, current_time + 86400, 4*amt_1, 1).then(function(f) {console.log(f)});
+i.addProductToStore('iphoneXR 红色128G', 'Phones', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk', current_time, current_time + 86400, 5*amt_1, 1).then(function(f) {console.log(f)});
+i.addProductToStore('Jeans', 'Clothing, Shoes & Accessories', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk', current_time, current_time + 86400 + 86400 + 86400, 5*amt_1, 1).then(function(f) {console.log(f)});
+
+```
