--- a/ebay_dapp/3.ebay去中心化拍卖平台竞标和公告测试.md
+++ b/ebay_dapp/3.ebay去中心化拍卖平台竞标和公告测试.md
@@ -51,12 +51,18 @@ contract.highestBidderInfo.call(1).then(function(f) {console.log(f);});
 ```js
 
 current_time = Math.round(new Date() / 1000);
- amt_1 = web3.utils.toWei('1', 'ether');
-i.addProductToStore('iphone 5', 'Phones', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk', current_time, current_time + 200, 2*amt_1, 0).then(function(f) {console.log(f)})};
-i.addProductToStore('iphone 5s', 'Phones', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk', current_time, current_time + 400, 3*amt_1, 1).then(function(f) {console.log(f)});
-i.addProductToStore('iphone 6', 'Phones', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk', current_time, current_time + 14, amt_1, 0).then(function(f) {console.log(f)});
-i.addProductToStore('iphone 6s', 'Phones', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk', current_time, current_time + 86400, 4*amt_1, 1).then(function(f) {console.log(f)});
-i.addProductToStore('iphoneXR 红色128G', 'Phones', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk', current_time, current_time + 86400, 5*amt_1, 1).then(function(f) {console.log(f)});
-i.addProductToStore('Jeans', 'Clothing, Shoes & Accessories', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk', current_time, current_time + 86400 + 86400 + 86400, 5*amt_1, 1).then(function(f) {console.log(f)});
+amt_1 = web3.utils.toWei('2', 'ether');
+amt_2 = web3.utils.toWei('3', 'ether');
+amt_3 = web3.utils.toWei('1', 'ether');
+amt_4 = web3.utils.toWei('4', 'ether');
+amt_5 = web3.utils.toWei('5', 'ether');
+amt_6 = web3.utils.toWei('5', 'ether');
+var contract; EcommerceStore.deployed().then(function(instance) {contract = instance;});
+contract.addProductToStore('iphone 5', 'Phones', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk', current_time,current_time + 200, amt_1, 0).then(function(f) {console.log(f)});
+contract.addProductToStore('iphone 5s', 'Phones', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk', current_time,current_time + 400, amt_2, 1).then(function(f) {console.log(f)});
+contract.addProductToStore('iphone 6', 'Phones', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk', current_time,current_time + 14, amt_3, 0).then(function(f) {console.log(f)});
+contract.addProductToStore('iphone 6s', 'Phones', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk', current_time,current_time + 86400, amt_4, 1).then(function(f) {console.log(f)});
+contract.addProductToStore('iphoneXR 红色128G', 'Phones', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk', current_time,current_time + 86400, amt_5, 1).then(function(f) {console.log(f)});
+contract.addProductToStore('Jeans', 'Clothing, Shoes & Accessories', 'QmNZWJ8dBQxWrk3YzjrHxkVpePaGajqASKCQQJLmaTVSy2', 'QmbLRFj5U6UGTy3o9Zt8jEnVDuAw2GKzvrrv3RED9wyGRk',current_time, current_time + 86400 + 86400 + 86400, amt_6, 1).then(function(f) {console.log(f)});
 
 ```
