以太坊源码分析环境搭建和测试

--- a/ebay_dapp/0.ipfs常用命令等注意事项.md
+++ b/ebay_dapp/0.ipfs常用命令等注意事项.md
@@ -37,3 +37,11 @@ ipfs config --json API.HTTPHeaders.Access-Control-Allow-Credentials '["true"]'
 ipfs config --json API.HTTPHeaders.Access-Control-Allow-Headers '["Authorization"]'
 ipfs config --json API.HTTPHeaders.Access-Control-Expose-Headers '["Location"]'
 ```
+
+```window
+./ipfs.exe config --json API.HTTPHeaders.Access-Control-Allow-Methods '["PUT","GET", "POST", "OPTIONS"]'
+./ipfs.exe config --json API.HTTPHeaders.Access-Control-Allow-Origin '["*"]'
+./ipfs.exe config --json API.HTTPHeaders.Access-Control-Allow-Credentials '["true"]'
+./ipfs.exe config --json API.HTTPHeaders.Access-Control-Allow-Headers '["Authorization"]'
+./ipfs.exe config --json API.HTTPHeaders.Access-Control-Expose-Headers '["Location"]'
+```
