--- a/docs/markdown/bigdata/hadoop/1.Hadoop单机环境安装.md
+++ b/docs/markdown/bigdata/hadoop/1.Hadoop单机环境安装.md
@@ -39,17 +39,17 @@ systemctl disable firewalld.service #开机禁用防火墙自启
 ```bash
 sudo vim /etc/hosts
 
-# hadoop001
+//hadoop001
 192.168.1.1 hadoop001
 192.168.1.2 hadoop002
 192.168.1.3 hadoop003
 
-# hadoop002
+//hadoop002
 192.168.1.1 hadoop001
 192.168.1.2 hadoop002
 192.168.1.3 hadoop003
 
-# hadoop003
+//hadoop003
 192.168.1.1 hadoop001
 192.168.1.2 hadoop002
 192.168.1.3 hadoop003
